cmake_minimum_required(VERSION 3.17)
project(ForClass C)

set(CMAKE_C_STANDARD 11)

add_executable(ren08 ren08.c)
add_executable(ren09 ren09.c)
add_executable(6.4.2 6.4.2.c)
add_executable(ren10 ren10.c)
add_executable(pngdisplay.c pngdisplay)
add_executable(rei7.c rei7)
add_executable(ren18.c ren18)